chore: remove JDK 9 profile
Signed-off-by: Jeff Mesnil <jmesnil@redhat.com>