@@ -348,19 +348,6 @@
                 <module>examples</module>
             </modules>
         </profile>
-        <profile>
-            <id>jdk9</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <properties>
-                <modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
-                    --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-                    --add-modules=java.se
-                </modular.jdk.args>
-            </properties>
-        </profile>
     </profiles>
 
     <repositories>
